# analysis-dashboard-v2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DESIGN.md  README.md  basedpyrightconfig.json  pyproject.toml
server/: Dockerfile  __init__.py  __main__.py  config.py  dependencies.py  exceptions.py  main.py  protocols.py  pyproject.toml  requirements.txt  schema.yaml  settings.docker.yaml  settings.yaml  settings.yaml.example
server/middleware/: __init__.py  access_log.py  error_handler.py  performance.py  rate_limiter.py
server/models/: __init__.py  auth.py  common.py  damage.py  dashboard.py  derived_data_task.py  session.py  upload.py  user.py
server/routers/: __init__.py  admin_users.py  auth.py  damage.py  dashboard.py  export.py  health.py  info.py  session.py  sync.py  upload.py
server/services/: __init__.py  active_presence.py  auth.py  channel_map_snapshot.py  channel_reprocess_progress.py  custom_fields.py  damage_calculation_progress.py  damage_calculation_task.py  damage_channels.py  damage_inspect.py  dashboard_orchestration.py  derived_artifact_storage.py  derived_data_lineage.py  derived_data_task.py  downsampling.py  durability_schedule.py  event_header_provider.py  event_preview.py  export.py  fatigue_damage.py  ingestion.py  operation_admission.py  per_event_channel_resolver.py  plot_image.py  post_upload_precompute.py  query.py  schedule_damage_calculation.py  schedule_damage_prerequisites.py  schedule_damage_rescale.py  schedule_damage_validation.py  schedule_event_rows.py  scope_damage_repair.py  (+5 more)
(+1211 files in other folders)
